# vmware_exporter

./: .env.example  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum
cmd/: BUILD.bazel  datastores.go  hosts.go  vms.go  vmware_exporter.go
pkg/util/: BUILD.bazel  common.go
