load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "datastores.go",
        "hosts.go",
        "vms.go",
        "vmware_exporter.go",
    ],
    importpath = "github.com/ProdriveTechnologies/vmware_exporter/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/util:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_prometheus_common//log:go_default_library",
        "@com_github_vmware_govmomi//:go_default_library",
        "@com_github_vmware_govmomi//view:go_default_library",
        "@com_github_vmware_govmomi//vim25/mo:go_default_library",
    ],
)

go_binary(
    name = "vmware_exporter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
